@@ -40,6 +40,10 @@ Post v24.09.0
      a lower priority than static routes.
    - Add the option "dynamic-routing-connected-as-host-routes" to LRPs. If set
      to true then connected routes are announced as individual host routes.
+   - Add 'redistribute-lb-vips' LRP option. If set to true, the LRP can be used
+     to advertise host paths to the Load Balancer VIPs associated with the LR.
+   - Add 'redistribute-nat' LRP option. If set to true, the LRP can be used
+     to advertise external NAT IPs associated with it.
 
 OVN v24.09.0 - 13 Sep 2024
 --------------------------
